update docker version

--- a/1.Docker/roles/vasyakrg.docker_install/defaults/main.yml
+++ b/1.Docker/roles/vasyakrg.docker_install/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
 docker_user: ubuntu
-docker_version_docker_compose: 1.25.0-rc2
+docker_version_docker_compose: 1.25.4
 docker_additional_service_opts: |
   {}
