--- a/2.Rancher/cluster.yml
+++ b/2.Rancher/cluster.yml
@@ -35,6 +35,9 @@ services:
   kube-controller:
     extra_args:
       terminated-pod-gc-threshold: 100
+  kubelet:
+    extra_args:
+      max-pods: 250
 
 
 ingress:
