--- a/1.Docker/roles/vasyakrg.docker_install/tasks/main.yml
+++ b/1.Docker/roles/vasyakrg.docker_install/tasks/main.yml
@@ -29,8 +29,8 @@
 - name: 'Install docker'
   apt:
     name:
-      - 'docker-ce'
-      - 'docker-ce-cli'
+      - 'docker-ce={{ docker_version_docker_ce }}'
+      - 'docker-ce-cli={{ docker_version_docker_ce }}'
       - 'containerd.io'
     state: 'present'
     update_cache: yes
