--- a/2.Rancher/cluster.yml
+++ b/2.Rancher/cluster.yml
@@ -38,7 +38,9 @@ services:
   kubelet:
     extra_args:
       max-pods: 250
-
+  kube-api:
+    extra_args:
+      feature-gates: "ServiceAccountIssuerDiscovery=false,RemoveSelfLink=false"
 
 ingress:
   provider: nginx
